--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
     "nodemon": "^2.0.22"
