--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Jake",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "mongodb": "^5.6.0",
